# slurmer

./: .gitignore  README.md  pyproject.toml  setup.py
doc/source/: index.rst  modules.rst  slurmer.rst  tests.rst
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/getting_started/: installation.rst  quickstart.rst
docs/source/user_guide/: submit_job.rst  template_intro.rst  template_management.rst
slurmer/: __init__.py  config.py  job.py  script.py
slurmer/templates/: default.sh
tests/: test_slurmer.py
